syntax = "proto3";

package task;

option go_package = "./pb";

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
}

message CreateTaskRequest {
  int64 name = 1;
  int64 description = 2;
  int64 userId = 3;
}

message CreateTaskResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}